--- a/minesweeper-game.6
+++ b/minesweeper-game.6
@@ -60,7 +60,7 @@ To play the
 .Nm
 you should enter commands
 in specific format:
-.Ic ('#'|'?')'X'x'Y'; .
+.Ic (#|?)XxY; .
 .
 .Pp
 Describing the command,
