--- a/minesweeper-game.6
+++ b/minesweeper-game.6
@@ -91,6 +91,33 @@ returns
 an
 .Xr 3 errno .
 .
+.Sh EXAMPLES
+Your session will look
+like this one:
+.Bd -literal -offset indent
+$ minesweeper-game -m1 3 3
+ # # #
+ # # #
+ # # #
+#1x1;
+ 1 # #
+ # # #
+ # # #
+#1x3;
+ 1 # #
+ 1 1 1
+ 0 0 0
+#3x1;
+ 1 # 1
+ 1 1 1
+ 0 0 0
+?2x1;
+ 1 F 1
+ 1 1 1
+ 0 0 0
+<Ctrl+D>
+.Ed
+.
 .Sh BUGS
 If you'll meet
 any bugs,
