--- a/minesweeper-game.6
+++ b/minesweeper-game.6
@@ -92,7 +92,7 @@ an
 .Xr 3 errno .
 .
 .Sh EXAMPLES
-Your session will look
+Your session may look
 like this one:
 .Bd -literal -offset indent
 $ minesweeper-game -m1 3 3
