--- a/minesweeper-game.6
+++ b/minesweeper-game.6
@@ -103,18 +103,31 @@ $ minesweeper-game -m1 3 3
  1[][]
 [][][]
 [][][]
-#1x3;
+#3x3;
  1[][]
- 1 1 1
- 0 0 0
-#3x1;
+[][][]
+[][] 1
+#1x2;
+ 1[][]
+ 1[][]
+[][] 1
+#1x3;#2x1;#3x1;#2x3;#3x2;
+ 1[][]
+ 1[][]
+ 1[] 1
+ 1 1[]
+ 1[][]
  1[] 1
  1 1 1
- 0 0 0
-?2x1;
- 1?? 1
+ 1[][]
+ 1[] 1
  1 1 1
- 0 0 0
+ 1[][]
+ 1 1 1
+ 1 1 1
+ 1[] 1
+ 1 1 1
+You won!
 <Ctrl+D>
 .Ed
 .
