--- a/minesweeper-game.6
+++ b/minesweeper-game.6
@@ -67,11 +67,11 @@ Describing the command,
 the first char if command is
 the action
 that is either
-.Ic # (
-open cell)
+.Ic #
+(open cell)
 or
-.Ic ? (
-flag cell).
+.Ic ?
+(flag cell).
 Then comes
 the coordinates
 in format
@@ -89,7 +89,7 @@ the semicolon.
 .Nm
 returns
 an
-.Xr 3 errno .
+.Xr errno 3
 .
 .Sh EXAMPLES
 Your session may look
