--- a/minesweeper-game.6
+++ b/minesweeper-game.6
@@ -1,4 +1,4 @@
-.Dd January  3, 2025
+.Dd January  6, 2025
 .Dt MINESWEEPER-GAME 6
 .Os
 .
@@ -8,7 +8,7 @@
 .
 .Sh SYNOPSIS
 .Nm
-.Op Fl h
+.Op Fl hS
 .Op Fl s Ar seed
 .Op Fl m Ar mines
 .Op Ar width height
@@ -27,6 +27,8 @@ you can pass to
 .Bl -tag -width Ds
 .It Fl h
 Show help message
+.It Fl S
+Show used seed
 .It Fl s Ar seed
 Make
 .Nm
